--- a/styles/style.css
+++ b/styles/style.css
@@ -34,11 +34,11 @@
     --gray: #7A7A7A;
 }
 
-button {
+.button {
     background-color: var(--pink);
     color: white;
     border: transparent;
-    padding: 1.3em 1em;
+    padding: 1.3em 1.5em;
     width: 230px;
     align-self: center;
     text-transform: uppercase;
@@ -46,6 +46,7 @@ button {
     font-weight: 500;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     cursor: pointer;
+    letter-spacing: 0.15em;
 
 
 }
@@ -57,6 +58,11 @@ body {
 
 h1, h2, h3, h4 {
     font-family: 'Merriweather', sans-serif;
+}
+
+.introduction > h3:nth-child(4) {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
 }
 
 .services h4 {
@@ -120,6 +126,7 @@ header, .contact-form {
     /*border: 2px solid red;*/
     margin-top: 7em;
     justify-content: center;
+    flex-shrink: 1;
 }
 
 .header-content-inner-container {
@@ -168,11 +175,6 @@ header, .contact-form {
     width: 850px;
 }
 
-.introduction > h3:nth-child(4) {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
-}
-
 /* --------------- 4.3 Projects ------------------- */
 .projects {
     background-color: var(--light-gray);
@@ -216,6 +218,7 @@ header, .contact-form {
 
 .project-image-wrapper {
     flex-basis: 600px;
+    /*border: 3px solid red;*/
 }
 
 .project-image {
@@ -274,8 +277,156 @@ header, .contact-form {
 }
 
 /* --------------- 4.5 Contact Form ------------------- */
+.contact-form {
+    /*border: 3px solid green;*/
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 1000px;
+}
+
+.form-title {
+    margin: 5em;
+    /*border: 3px solid white;*/
+}
+
+.form-title h2 {
+    font-size: 46px;
+}
+
+.form-title p {
+    font-size: 20px;
+    font-weight: 300;
+    margin: 1.5em;
+}
+
+.contact-form-inner-container {
+    display: flex;
+    flex-direction: column;
+    /*border: 3px solid white;*/
+    width: 900px;
+    text-align: left;
+}
+
+.contact-form-inner-container input {
+    padding: 1.4em 0;
+}
+.contact-form-inner-container input::placeholder, textarea::placeholder {
+    padding-left: 1rem;
+    font-weight: 600;
+    font-size: 16px;
+    color: var(--gray);
+}
+
+textarea::placeholder {
+    padding-top: 1rem;
+}
+
+textarea {
+    width: 100%;
+    height: 250px
+
+}
 
 
+.form-btn {
+    margin-top: 2.5em;
+    width: 200px;
 
+}
+
+/* --------------- 4.6 Footer ------------------- */
+footer {
+    background-color: var(--black);
+    height: 50px;
+    width: 100%;
+    color: white;
+}
+
+.footer-text {
+    padding: 1.5em;
+    font-size: 13px;
+}
 
 /* ------------------------------- 5. Media Queries -------------------------------- */
+@media screen and (min-width: 0px) and (max-width: 776px) {
+
+    /* --------------- 5.1 Nav-mobile ------------------- */
+
+    .nav-outer-container {
+        justify-content: center;
+    }
+
+    .nav-inner-container {
+        /*border: 3px solid white;*/
+        width: 100%;
+        justify-content: space-between;
+    }
+    /* --------------- 5.2 Header-Mobile ------------------- */
+    .header-title {
+        width: 600px;
+    }
+
+    header {
+        height: 700px;
+    }
+
+    .button  {
+        width: 280px;
+        padding: 1.8rem;
+    }
+    /* --------------- 5.3 Introduction Mobile ------------------- */
+    .introduction > h3:nth-child(-n+3) {
+        width: 600px;
+        margin-inline: 1rem;
+    }
+    /* --------------- 5.4 Projects Mobile ------------------- */
+
+    .project {
+        flex-direction: column-reverse;
+        gap: 1rem;
+        margin-inline: 0.5em;
+    }
+
+    .project-image-wrapper {
+        flex-basis: 400px;
+    }
+
+    .project-title {
+        font-size: 30px;
+    }
+    /* --------------- 5.5 Services Mobile ------------------- */
+
+    .services-inner-container {
+        grid-template-columns: auto;
+        margin: 2rem;
+        gap: 3rem;
+    }
+
+    .service-article {
+        height: 400px;
+    }
+
+    .services-paragraph {
+        height: 100%;
+    }
+
+    .services-icon {
+        width: 100px;
+    }
+
+    .services-title  {
+        font-size: 40px;
+    }
+
+    /* --------------- 5.6 Contact Form Mobile ------------------- */
+    .form-title h2 {
+        font-size: 30px;
+    }
+
+    .contact-form-inner-container {
+        width: 600px;
+    }
+    /* --------------- 4.6 Footer ------------------- */
+}
