--- a/styles/style.css
+++ b/styles/style.css
@@ -5,16 +5,21 @@
     Table of Contents
     1. Global Styles
     2. Typography
-    3. Layout
-        3.1 Reusables
-        3.2 Other
-    4. Areas
-        4.1 Header
-        4.2 Introduction
-        4.3 Projects
-        4.4 Services
+    3. Areas
+        3.1 Header
+        3.2 Introduction
+        3.3 Projects
+        3.4 Services
+        3.5 Contact Form
+        3.6 Footer
  */
-    /*5. Media Queries*/
+    /*4. Media Queries
+       4.1 Header Mobile
+       4.2 Introduction Mobile
+       4.3 Projects Mobile
+       4.4 Services Mobile
+       4.5 Contact Form Mobile
+*/
  /*////////////////////////*/
 
 /* ------------------------------- 1. Global Styles -------------------------------- */
@@ -82,16 +87,9 @@ h1, h2, h3, h4 {
     color: var(--pink);
 }
 
+/* ------------------------------- 3. Areas ---------------------------------------- */
 
-/* ------------------------------- 3. Layout --------------------------------------- */
-
-/* --------------- 3.1 Reusables ----------------------- */
-
-/* --------------- 3.2 Other --------------------------- */
-
-/* ------------------------------- 4. Areas ---------------------------------------- */
-
-/* --------------- 4.1 Header ------------------------- */
+/* --------------- 3.1 Header ------------------------- */
 
 header, .contact-form {
     /*display: flex;*/
@@ -160,7 +158,7 @@ header, .contact-form {
     left: -35px;
 }
 
-/* --------------- 4.2 Introduction ------------------- */
+/* --------------- 3.2 Introduction ------------------- */
 .introduction {
     display: flex;
     flex-direction: column;
@@ -175,7 +173,7 @@ header, .contact-form {
     width: 850px;
 }
 
-/* --------------- 4.3 Projects ------------------- */
+/* --------------- 3.3 Projects ------------------- */
 .projects {
     background-color: var(--light-gray);
     display: flex;
@@ -240,7 +238,7 @@ header, .contact-form {
     flex-direction: row-reverse;
 }
 
-/* --------------- 4.4 Services ------------------- */
+/* --------------- 3.4 Services ------------------- */
 .services {
     display: flex;
     flex-direction: column;
@@ -276,18 +274,18 @@ header, .contact-form {
     font-size: 1.3em;
 }
 
-/* --------------- 4.5 Contact Form ------------------- */
+/* --------------- 3.5 Contact Form ------------------- */
 .contact-form {
     /*border: 3px solid green;*/
     display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
-    height: 1000px;
+    height: auto;
 }
 
 .form-title {
-    margin: 5em;
+    margin: 5em 0 0 0;
     /*border: 3px solid white;*/
 }
 
@@ -307,16 +305,17 @@ header, .contact-form {
     /*border: 3px solid white;*/
     width: 900px;
     text-align: left;
+    margin-bottom: 1em;
 }
 
 .contact-form-inner-container input {
     padding: 1.4em 0;
 }
 .contact-form-inner-container input::placeholder, textarea::placeholder {
-    padding-left: 1rem;
     font-weight: 600;
     font-size: 16px;
     color: var(--gray);
+    padding-left: 1em;
 }
 
 textarea::placeholder {
@@ -331,14 +330,14 @@ textarea {
 
 
 .form-btn {
-    margin-top: 2.5em;
+    margin: 2.5em;
     width: 200px;
 
 }
 
-/* --------------- 4.6 Footer ------------------- */
+/* --------------- 3.6 Footer ------------------- */
 footer {
-    background-color: var(--black);
+    background-color: black;
     height: 50px;
     width: 100%;
     color: white;
@@ -349,10 +348,10 @@ footer {
     font-size: 13px;
 }
 
-/* ------------------------------- 5. Media Queries -------------------------------- */
+/* ------------------------------- 4. Media Queries -------------------------------- */
 @media screen and (min-width: 0px) and (max-width: 776px) {
 
-    /* --------------- 5.1 Nav-mobile ------------------- */
+    /* --------------- 4.1 Nav-mobile ------------------- */
 
     .nav-outer-container {
         justify-content: center;
@@ -361,11 +360,11 @@ footer {
     .nav-inner-container {
         /*border: 3px solid white;*/
         width: 100%;
-        justify-content: space-between;
+        justify-content: space-evenly;
     }
-    /* --------------- 5.2 Header-Mobile ------------------- */
+    /* --------------- 4.2 Header-Mobile ------------------- */
     .header-title {
-        width: 600px;
+        width: auto;
     }
 
     header {
@@ -376,12 +375,12 @@ footer {
         width: 280px;
         padding: 1.8rem;
     }
-    /* --------------- 5.3 Introduction Mobile ------------------- */
+    /* --------------- 4.3 Introduction Mobile ------------------- */
     .introduction > h3:nth-child(-n+3) {
         width: 600px;
         margin-inline: 1rem;
     }
-    /* --------------- 5.4 Projects Mobile ------------------- */
+    /* --------------- 4.4 Projects Mobile ------------------- */
 
     .project {
         flex-direction: column-reverse;
@@ -396,7 +395,7 @@ footer {
     .project-title {
         font-size: 30px;
     }
-    /* --------------- 5.5 Services Mobile ------------------- */
+    /* --------------- 4.5 Services Mobile ------------------- */
 
     .services-inner-container {
         grid-template-columns: auto;
@@ -420,13 +419,19 @@ footer {
         font-size: 40px;
     }
 
-    /* --------------- 5.6 Contact Form Mobile ------------------- */
+    /* --------------- 4.6 Contact Form Mobile ------------------- */
     .form-title h2 {
         font-size: 30px;
     }
 
     .contact-form-inner-container {
-        width: 600px;
+        width: 100%;
+        padding: 0 1rem;
+
     }
-    /* --------------- 4.6 Footer ------------------- */
+
+    .form-btn {
+        width: 180px;
+    }
+
 }
