Een wat kleine typefoutjes en dubbele code opgeruimd

--- a/styles/style.css
+++ b/styles/style.css
@@ -45,7 +45,7 @@
     background-color: var(--pink);
     color: white;
     border: transparent;
-    padding: 1.3em 1.5em;
+    padding: 1.3rem 1.5rem;
     width: 230px;
     align-self: center;
     text-transform: uppercase;
@@ -53,7 +53,7 @@
     font-weight: 500;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     cursor: pointer;
-    letter-spacing: 0.15em;
+    letter-spacing: 0.15rem;
 
 
 }
@@ -119,7 +119,7 @@ header, .contact-form {
     width: 100%;
     /*border: 2px solid green;*/
     justify-content: flex-end;
-    padding-top: 1em;
+    padding-top: 1rem;
     }
 
 .nav-inner-container {
@@ -127,14 +127,14 @@ header, .contact-form {
     /*border: 2px solid red;*/
     justify-content: flex-end;
     list-style: none;
-    gap:2em;
-    margin: 1em 2em;
+    gap:2rem;
+    margin: 1rem 2rem;
 }
 
 .header-content-outer-container {
     display: flex;
     /*border: 2px solid red;*/
-    margin-top: 7em;
+    margin-top: 7rem;
     justify-content: center;
     flex-shrink: 1;
 }
@@ -143,7 +143,7 @@ header, .contact-form {
     /*border: 2px solid green;*/
     display: flex;
     flex-direction: column;
-    gap: 2em;
+    gap: 2rem;
     flex-basis: 1200px;
     flex-shrink: 1;
 }
@@ -171,6 +171,7 @@ header, .contact-form {
     /*border: 3px solid black;*/
 }
 
+/*
 .triangle {
     width: 0;
     height: 0;
@@ -180,18 +181,19 @@ header, .contact-form {
     position: absolute;
     top: 623px;
 }
+*/
 
 /* --------------- 3.2 Introduction ------------------- */
 .introduction {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 2em;
-    margin: 5em 0;
+    gap: 2rem;
+    margin: 5rem 0;
 }
 .introduction > h3:nth-child(-n+3) {
     color: var(--purple);
-    font-size: 1.8em;
+    font-size: 1.8rem;
     font-weight: 600;
     width: 850px;
 }
@@ -205,16 +207,16 @@ header, .contact-form {
     /*border: 3px solid pink;*/
     width: 100%;
     align-items: center;
-    padding: 3em 0;
+    padding: 3rem 0;
 }
 
 .project {
     display: flex;
     /*border: 3px solid black;*/
-    padding: 2em 2em;
+    padding: 2rem 2rem;
     max-width: 1200px;
     justify-content: center;
-    gap: 8em;
+    gap: 8rem;
     margin: 0 2em;
 }
 
@@ -222,7 +224,7 @@ header, .contact-form {
     display: flex;
     flex-direction: column;
     /*border: 3px solid green;*/
-    gap: 2em;
+    gap: 2rem;
     justify-content: center;
     flex: 1;
 }
@@ -251,8 +253,8 @@ header, .contact-form {
     text-decoration: none;
     text-transform: uppercase;
     font-weight: 600;
-    font-size: 0.8em;
-    letter-spacing: 0.2em;
+    font-size: 0.8rem;
+    letter-spacing: 0.2rem;
     color: var(--purple);
     cursor: pointer;
 }
@@ -268,19 +270,19 @@ header, .contact-form {
     align-items: center;
     flex-basis: 100%;
     text-align: left;
-    margin: 5em 2em;
+    margin: 5rem 2rem;
 }
 
 .services-inner-container {
     display: grid;
     grid-template-columns: auto auto auto;
-    grid-gap: 2em;
+    grid-gap: 2rem;
     max-width: 1200px;
 }
 
 .service-article {
     border: 2px solid var(--purple);
-    padding: 2.5em;
+    padding: 2.5rem;
     box-shadow: 2px 29px 15px -20px rgba(222,222,222,1);
     min-width: auto;
     min-height: 300px;
@@ -293,8 +295,8 @@ header, .contact-form {
 }
 
 .service-article h4 {
-    margin: 0.7em 0 1.8em 0;
-    font-size: 1.3em;
+    margin: 0.7rem 0 1.8rem 0;
+    font-size: 1.3rem;
 }
 
 /* --------------- 3.5 Contact Form ------------------- */
@@ -308,7 +310,7 @@ header, .contact-form {
 }
 
 .form-title {
-    margin: 5em 0 0 0;
+    margin: 5rem 0 0 0;
     /*border: 3px solid white;*/
 }
 
@@ -319,7 +321,7 @@ header, .contact-form {
 .form-title p {
     font-size: 20px;
     font-weight: 300;
-    margin: 1.5em;
+    margin: 1.5rem;
 }
 
 .contact-form-inner-container {
@@ -328,21 +330,21 @@ header, .contact-form {
     /*border: 3px solid white;*/
     width: 900px;
     text-align: left;
-    margin-bottom: 1em;
+    margin-bottom: 1rem;
 }
 
 .contact-form-inner-container input {
-    padding: 1.4em 0;
+    padding: 1.4rem 0;
 }
 .contact-form-inner-container input::placeholder, textarea::placeholder {
     font-weight: 600;
     font-size: 16px;
     color: var(--gray);
-    padding-left: 1em;
+    padding-left: 1rem;
 }
 
 textarea::placeholder {
-    padding-top: 1em;
+    padding-top: 1rem;
 }
 
 textarea {
@@ -353,7 +355,7 @@ textarea {
 
 
 .form-btn {
-    margin: 2.5em;
+    margin: 2.5rem;
     width: 200px;
 
 }
@@ -368,7 +370,7 @@ footer {
 }
 
 .footer-text {
-    padding: 1.5em;
+    padding: 1.5rem;
     font-size: 13px;
 }
 
@@ -401,9 +403,6 @@ footer {
         padding: 1.8rem;
     }
 
-    .squiggle-line {
-        top:
-    }
     /* --------------- 4.3 Introduction Mobile ------------------- */
     .introduction > h3:nth-child(-n+3) {
         width: auto;
@@ -414,7 +413,7 @@ footer {
     .project {
         flex-direction: column-reverse;
         gap: 2rem;
-        margin-inline: 0.5em;
+        margin-inline: 0.5rem;
     }
 
     .project-image-wrapper {
