--- a/styles/style.css
+++ b/styles/style.css
@@ -380,8 +380,9 @@ main {
     display: flex;
     flex-direction: column;
     /*border: 3px solid white;*/
-    width: 900px;
+    max-width: 900px;
     text-align: left;
+    width: 100%;
 }
 
 .contact-form-inner-container input {
