--- a/styles/style.css
+++ b/styles/style.css
@@ -54,9 +54,86 @@
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     cursor: pointer;
     letter-spacing: 0.15rem;
-
-
 }
+
+/*De schuine lijnen die sections afscheiden*/
+.triangle {
+    position: relative;
+    background-color: transparent;
+    height: 1px;
+    width: 100%;
+}
+
+.triangle::before {
+    position: absolute;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 500px;
+    clip-path: polygon(0 90%, 0 100%, 100% 100%);
+    background-color: white;
+    top: -498px;
+}
+
+.triangle-2::before {
+    background-color: var(--light-gray);
+}
+
+
+.header-squiggle-line-outer-container{
+    position: relative;
+}
+
+.squiggle-line {
+    position: absolute;
+    top: 100px;
+    left: -35px;
+    /*border: 3px solid black;*/
+}
+
+.triangle-4 {
+    background-color: red;
+}
+
+.triangle-4::before {
+    background: rgb(72,69,228);
+    background: radial-gradient(circle, rgba(72,69,228,1) 0%, rgba(87,34,205,1) 100%);
+}
+
+
+/*De grote woorden achter de sections*/
+
+.intro-paragraph::before, .project-1::before, .services-inner-container::before {
+    position: absolute;
+    display: block;
+    content: "hello";
+    font-size: 30rem;
+    color: var(--light-purple);
+    z-index: -1;
+    font-weight: 500;
+    max-width: 1000px;
+    width: auto;
+    top: -140px;
+    left: -50px;
+}
+
+.project-1::before {
+    content: "work";
+    font-size: 28rem;
+    color: white;
+    top: -220px;
+}
+
+.services-inner-container::before {
+    content: "services";
+    font-size: 18rem;
+    top: -240px;
+    left: 50px;
+}
+
+
+
+
 /* ------------------------------- 2. Typography ----------------------------------- */
 body {
     font-family: 'Roboto', sans-serif;
@@ -162,37 +239,6 @@ header, .contact-form {
     font-weight: 300;
 }
 
-.header-squiggle-line-outer-container{
-    position: relative;
-}
-
-.squiggle-line {
-    position: absolute;
-    top: 100px;
-    left: -35px;
-    /*border: 3px solid black;*/
-}
-.triangle {
-    position: relative;
-    background-color: transparent;
-    height: 1px;
-    width: 100%;
-}
-
-.triangle::before {
-    position: absolute;
-    content: "";
-    display: block;
-    width: 100%;
-    height: 500px;
-    clip-path: polygon(0 90%, 0 100%, 100% 100%);
-    background-color: white;
-    top: -498px;
-
-
-
-}
-
 /* --------------- 3.2 Introduction ------------------- */
 
 .introduction {
@@ -207,35 +253,27 @@ header, .contact-form {
     /*border: 3px solid hotpink;*/
 }
 
-/*
-.introduction::before {
-    position: absolute;
-    display: block;
-    content: "hello";
-    font-size: 28rem;
-    color: var(--light-purple);
-    z-index: -1;
-    font-weight: 500;
-    max-width: 850px;
-    width: auto;
-    top: -150px;
-    left: 400px;
-}
-*/
-
-.introduction > h3:nth-child(-n+3) {
+.intro-paragraph {
+    position: relative;
     color: var(--purple);
-    font-size: 1.8rem;
+    font-size: 1.7rem;
     font-weight: 600;
-    max-width: 850px;
+    max-width: 900px;
     margin: 0 1rem;
 }
+
+.intro-paragraph h3 {
+    margin-block: 1.5rem;
+}
+
+
 
 .contact-paragraph {
     margin: 5rem 0;
 }
 
 /* --------------- 3.3 Projects ------------------- */
+
 .projects {
     background-color: var(--light-gray);
     display: flex;
@@ -244,13 +282,12 @@ header, .contact-form {
     /*border: 3px solid pink;*/
     width: 100%;
     align-items: center;
-    padding: 3rem 0;
+    padding: 10rem 0 7rem 0;
+    z-index: -10;
 
 }
 
-.triangle-2::before {
-    background-color: var(--light-gray);
-    }
+
 
 .project {
     display: flex;
@@ -323,6 +360,10 @@ header, .contact-form {
     flex-direction: row-reverse;
 }
 
+.project-1 {
+    position: relative;
+    z-index: 1;
+}
 
 /* --------------- 3.4 Services ------------------- */
 .services {
@@ -331,7 +372,7 @@ header, .contact-form {
     align-items: center;
     flex-basis: 100%;
     text-align: left;
-    margin: 10rem 2rem;
+    margin: 14rem 2rem;
 }
 
 .services-inner-container {
@@ -339,6 +380,7 @@ header, .contact-form {
     grid-template-columns: auto auto auto;
     grid-gap: 2rem;
     max-width: 1200px;
+    position: relative;
 }
 
 .service-article {
@@ -348,6 +390,7 @@ header, .contact-form {
     min-width: auto;
     min-height: 300px;
     overflow: hidden;
+    background-color: white;
 }
 
 
@@ -358,15 +401,6 @@ header, .contact-form {
 .service-article h4 {
     margin: 0.7rem 0 1.8rem 0;
     font-size: 1.3rem;
-}
-
-.triangle-4 {
-    background-color: red;
-}
-
-.triangle-4::before {
-    background: rgb(72,69,228);
-    background: radial-gradient(circle, rgba(72,69,228,1) 0%, rgba(87,34,205,1) 100%);
 }
 
 /* --------------- 3.5 Contact Form ------------------- */
