Zojuist de laatse puntjes op de i gezet van de bonus opdracht

--- a/styles/style.css
+++ b/styles/style.css
@@ -114,7 +114,7 @@
     max-width: 1000px;
     width: auto;
     top: -140px;
-    left: -50px;
+    left: -70px;
 }
 
 .project-1::before {
@@ -122,6 +122,8 @@
     font-size: 28rem;
     color: white;
     top: -220px;
+    left: 50px;
+    letter-spacing: -1rem;
 }
 
 .services-inner-container::before {
@@ -570,26 +572,26 @@ footer {
     }
     /* --------------- 4.7 Bonusopdracht mobile ------------------- */
     .intro-paragraph::before {
-        font-size: 15rem;
-        left: 80px;
-        top: -115px;
+        font-size: 17rem;
+        left: 100px;
+        top: -140px;
         letter-spacing: -1.5rem;
     }
 
     .project-1::before {
-        font-size: 10rem;
-        top: -90px;
-        left: 130px;
+        font-size: 16rem;
+        top: -170px;
+        left: 90px;
         font-weight: 700;
         letter-spacing: -1rem;
 
     }
 
     .services-inner-container::before {
-        font-size: 10rem;
+        font-size: 12rem;
         letter-spacing: -0.7rem;
-        top: -140px;
-        left: -10px;
+        top: -170px;
+        left: -20px;
 
     }
 
